Realize method getOnlyNewTenderListFromDB() in Controller. Add equals()/hashCode() to all classes DTO.